tests/ui/type-alias-impl-trait/no_inferrable_concrete_type.stderr
error: item does not constrain `Foo::{opaque#0}`, but has it in its signature
  --> $DIR/no_inferrable_concrete_type.rs:11:12
   |
LL |     pub fn bar(x: Foo) -> Foo {
   |            ^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/no_inferrable_concrete_type.rs:7:20
   |
LL |     pub type Foo = impl Copy;
   |                    ^^^^^^^^^

error: unconstrained opaque type
  --> $DIR/no_inferrable_concrete_type.rs:7:20
   |
LL |     pub type Foo = impl Copy;
   |                    ^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

